--- a/estilo.lista.de.contatos.1.css
+++ b/estilo.lista.de.contatos.1.css
@@ -5,10 +5,9 @@ body {
 body {
     background-color: aqua;
     margin: 0;
-    padding: 0;
+    padding: 36;
     font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Verdana, sans-serif;
     display: flex;
-    justify-content: center;
     align-items: center;
     flex-direction: column;
   }
@@ -17,59 +16,43 @@ body {
     color: #385555;
 }
 
-.list-wrapper {
-  background-color: white;
-  width: 90%;
-  max-width: 500px;
-  max-height: 400px;
-  overflow-y: auto;
-  border-radius: 5px;
-  box-shadow: 0 2px 6px rgba(0, 0, 0, .2);
-}
-
 .list {
-  list-style-type: none;
-  padding: 0;
-  margin: 0;
-
-}
-.list-item {
+  width: 90%;
+  max-width: 960px;
   display: flex;
-  border-bottom: 1px solid #eee;
-  padding: 16px;
+  flex-wrap: wrap;
+  justify-content: center;
+  gap: 16px;
+  list-style-type: none;
+}
+
+.list-item {
+  background-color: aliceblue;
+  flex-basis: 280;
+  border-radius: 5px;
+  text-align: center;
+  box-shadow: 0 2px 8px rgba(0, 0, 0, .2);
+  background-image: url(imagens/thumb02.jpg);
+  background-size: 100%;
+  background-repeat: no-repeat;
 }
 
 .list-item-imagem img {
-  width: 80px;
   border-radius: 50%;
-}
-
-.list-item__content {
-  padding: 0 20px;
-  flex-grow: 1;
+  width: 80px;
+  margin-top: 120px;
 }
 
 .list-item__name {
-  font-size: 24px;
-  color: #385555;
   margin: 0;
-}
-.list-item__email {
-  margin: 5px 0 0;
-  color: #aaa;
-}
-
-.list-item:hover {
-  background-color: #e8e8e8;
+  font-size: 25px;
+  color: #385555;
 }
 
 .list-item__action {
-  display: flex;
-  gap: 16px;
-  align-items: center;
-  opacity: 0;
-}
-
-.list-item:hover .list-item__action {
-   opacity: 0.3;
+ display: flex;
+ background-color: #e5e5e5;
+ padding: 16px;
+ gap: 16px;
+ justify-content: space-evenly;
 }
