--- a/estilo.    site de cursos web desenvolvedor basic.css
+++ b/estilo.    site de cursos web desenvolvedor basic.css
@@ -101,7 +101,15 @@ footer {
   letter-spacing: 2px;
 }
 
-h3 a {
-  background-color: rgb(84, 84, 87);
-  color: rgb(19, 19, 234);
+.voltar {
+  color: black;
+  font-size: 17px;
+  text-decoration: underline;
 }
+aside{
+  padding: 0.5rem;
+}
+.voltar:hover {
+  color: white;
+}
+
