--- a/estilo.lista.de.contatos.1.css
+++ b/estilo.lista.de.contatos.1.css
@@ -56,3 +56,13 @@ body {
  gap: 16px;
  justify-content: space-evenly;
 }
+.voltar {
+  font-size: 20px;
+  color: black;
+}
+aside {
+  padding: 1rem;
+}
+.voltar:hover{
+  color: white;
+}
