--- a/estilo.    site de cursos web desenvolvedor basic.css
+++ b/estilo.    site de cursos web desenvolvedor basic.css
@@ -2,9 +2,8 @@ body {
   font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
   margin: auto;
   background-color: rgb(187, 193, 199);
-  padding: auto;
-  min-width: 200px;
-  
+  padding: 0;
+  min-width: 600px;
 }
 header {
   background-image: url(bg-3.jpg);
@@ -20,6 +19,11 @@ li {
  background-color: rgb(0, 0, 0, .3);
  padding: 8px;
  border: solid white;
+}
+li a:hover {
+  color: black;
+  text-decoration: underline;
+
 }
 a {
   color: white;
@@ -59,7 +63,6 @@ main {
   width: 80%;
   padding: 1rem 9rem;
   margin: 1rem 1rem;
-  min-width: 200px;
 }
 
 .a {
@@ -68,6 +71,10 @@ main {
   background-color: rgb(196, 196, 197);
   border-radius: 5%;
   display: inline-block;
+}
+
+.a:hover {
+ background-color: rgba(18, 8, 8, 0.2);
 }
 
 .html {
@@ -96,7 +103,7 @@ footer {
   color: white;
   background-color: #6b6c68;
   text-align: center; 
-  padding: 30px;
+  padding: 25px;
   text-shadow: 2px 2px 2px black;
   letter-spacing: 2px;
 }
@@ -104,12 +111,13 @@ footer {
 .voltar {
   color: black;
   font-size: 17px;
-  text-decoration: underline;
 }
 aside{
   padding: 0.5rem;
 }
 .voltar:hover {
   color: white;
+  text-decoration: underline;
+
 }
 
