--- a/estilo.    site de cursos web desenvolvedor basic.css
+++ b/estilo.    site de cursos web desenvolvedor basic.css
@@ -3,14 +3,16 @@ body {
   margin: auto;
   background-color: rgb(187, 193, 199);
   padding: 0;
-  min-width: 600px;
+  margin: 0;
+  min-width: 200px;
 }
 header {
   background-image: url(bg-3.jpg);
-  height: 500px;
+  height: 30em;
   background-size: cover;
   background-position: right center;
   padding: 1px;
+  flex-wrap: wrap;
 }
 li {
  margin: 20px 50px 0 0;
@@ -19,6 +21,8 @@ li {
  background-color: rgb(0, 0, 0, .3);
  padding: 8px;
  border: solid white;
+ flex-wrap: wrap;
+  
 }
 li a:hover {
   color: black;
@@ -34,6 +38,8 @@ a {
 }
 ul {
   text-align: right;
+  flex-wrap: wrap;
+  justify-content: space-between;
 }
 h1 {
   color: white;
@@ -115,9 +121,17 @@ footer {
 aside{
   padding: 0.5rem;
 }
-.voltar:hover {
-  color: white;
-  text-decoration: underline;
 
+
+@media (max-width: 768px) {
+
+  main {
+    padding: 0;
+  }
+
+  h1 {
+    font-size: 40px;
+  }
+
+  
 }
-
