--- a/modas.css
+++ b/modas.css
@@ -59,7 +59,9 @@ body {
     text-transform: uppercase;
     padding-bottom: 20px;
 }
-
+.texto{
+    font-size: 1.06em;
+}
 .img-2 {
     padding-top: 5rem;
     display: flex;
@@ -86,10 +88,7 @@ body {
 .titulo-3 {
     text-transform: uppercase;
     font-size: 3em;
-    letter-spacing: 2px;
     margin-left: 2em;
-    line-height: 60px;
-
 }
 
 .parte-3-text {
@@ -106,4 +105,46 @@ footer {
     text-align: center;
     padding-top: 15px;
     letter-spacing: 5px;
+}
+
+@media screen and (max-width: 768px) {
+     .header {
+        flex-direction: column;
+        height: auto;
+        padding: 0.1em;
+    }
+
+    .nome-top {
+        padding-left: 0;
+        font-size: 1.5em;
+        text-align: center;
+    }
+
+    .listas-header-ul {
+        flex-direction: column;
+        margin-left: 0;
+        padding: 0;
+        align-items: center;
+    }
+
+    .listas-header-li {
+        padding: 0.5em 0;
+    }
+
+    .img-2 {
+        flex-direction: column; 
+    }
+
+    .titulo-3 {
+        font-size: 2em; 
+        margin-left: 0;
+        text-align: center;    
+    }
+
+    .parte-3-text {
+        margin-left: 1em; 
+        margin-right: 1em;
+        text-align: center;
+    }
+
 }
